--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<a href="Split.exe">Windows EXE</a>
-<a href="Split.zip">Windows ZIP</a>
-<a href="Split.apk">Android APK</a>
-<a href="Split.ipa">iOS IPA</a>
+<h1>Downloads</h1>
+<h2>FruitSpace</h2>
+<a href="https://gofruit.space/gdps/00bR">Main Page</a>
+<h2>Google Drive</h2>
+<a href="https://drive.google.com/file/d/1LWDz1uecZ0itgycS-frYukZkG-WFNDuW/view?usp=sharing">Windows EXE</a>
+<a href="https://drive.google.com/file/d/146qdwWw8cG4YFURYFomcR1-mDmaMfxau/view?usp=sharing">Windows ZIP</a>
+<a href="https://drive.google.com/file/d/1vJ5aOzkqE4F-mV1hMg5GWqizZWzmkg_g/view?usp=sharing">Android APK</a>
+<a href="https://drive.google.com/file/d/10FldQPgOmmeCsHpQE2Tcbrra6Ynt7fy6/view?usp=sharing">iOS IPA</a>
