--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<h1>Split</h1>
+<a href="https://discord.gg/SRrgWfVZta">Discord</a>
+<a href="https://www.youtube.com/@SplitGDPS">YouTube</a>
 <h1>Downloads</h1>
 <h2>FruitSpace</h2>
-<a href="https://gofruit.space/gdps/00bR">Main Page</a>
+<a href="https://gofruit.space/gdps/00bR">Main page</a>
 <h2>Google Drive</h2>
 <a href="https://drive.google.com/file/d/1LWDz1uecZ0itgycS-frYukZkG-WFNDuW/view?usp=sharing">Windows EXE</a>
 <a href="https://drive.google.com/file/d/146qdwWw8cG4YFURYFomcR1-mDmaMfxau/view?usp=sharing">Windows ZIP</a>
 <a href="https://drive.google.com/file/d/1vJ5aOzkqE4F-mV1hMg5GWqizZWzmkg_g/view?usp=sharing">Android APK</a>
 <a href="https://drive.google.com/file/d/10FldQPgOmmeCsHpQE2Tcbrra6Ynt7fy6/view?usp=sharing">iOS IPA</a>
+<h1>Created by</h1>
+<h2>chillex</h2>
+<a href="https://www.youtube.com/@chillex-ob6kw">YouTube</a>
+<h2>chillex</h2>
+<a href="https://www.youtube.com/@Hiddy.">YouTube</a>
