--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <h1>Created by</h1>
 <h2>chillex</h2>
 <a href="https://www.youtube.com/@chillex-ob6kw">YouTube</a>
-<h2>chillex</h2>
+<h2>Hiddanity</h2>
 <a href="https://www.youtube.com/@Hiddy.">YouTube</a>
