--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<html>
-  <head>
-    <title>Split</title>
-  </head>
-  <body>
-    <h1>Split</h1>
-    <a href="https://discord.gg/SRrgWfVZta">Discord</a>
-    <a href="https://www.youtube.com/@SplitGDPS">YouTube</a>
+<!DOCTYPE html>
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Split</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <h1>Split</h1>
+            <p>Приватный сервер Geometry Dash</p>
+            <a href="download"><img src="images/download.png" width="48" height="48"></a>
+            <a href="https://discord.gg/SRrgWfVZta"><img src="images/ds.png" width="48" height="48"></a>
+            <a href="https://youtube.com/@SplitGDPS"><img src="images/yt.png" width="48" height="48"></a>
+            <a href="https://t.me/splitgdps"><img src="images/tg.png" width="48" height="48"></a>
+            <a href="https://gdpshub.com/gdps/?id=323"><img src="images/gdpshub.png" width="48" height="48"></a>
+            
     <h1>Downloads</h1>
     <h2>FruitSpace</h2>
     <a href="https://gofruit.space/gdps/00bR">Main page</a>
