--- a/index.html
+++ b/index.html
@@ -7,27 +7,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <h1>Split</h1>
-            <p>Приватный сервер Geometry Dash</p>
-            <a href="download"><img src="images/download.png" width="48" height="48"></a>
-            <a href="https://discord.gg/SRrgWfVZta"><img src="images/ds.png" width="48" height="48"></a>
-            <a href="https://youtube.com/@SplitGDPS"><img src="images/yt.png" width="48" height="48"></a>
-            <a href="https://t.me/splitgdps"><img src="images/tg.png" width="48" height="48"></a>
-            <a href="https://gdpshub.com/gdps/?id=323"><img src="images/gdpshub.png" width="48" height="48"></a>
-            
-    <h1>Downloads</h1>
-    <h2>FruitSpace</h2>
-    <a href="https://gofruit.space/gdps/00bR">Main page</a>
-    <h2>Google Drive</h2>
-    <a href="https://drive.google.com/file/d/1LWDz1uecZ0itgycS-frYukZkG-WFNDuW/view?usp=sharing">Windows EXE</a>
-    <a href="https://drive.google.com/file/d/146qdwWw8cG4YFURYFomcR1-mDmaMfxau/view?usp=sharing">Windows ZIP</a>
-    <a href="https://drive.google.com/file/d/1vJ5aOzkqE4F-mV1hMg5GWqizZWzmkg_g/view?usp=sharing">Android APK</a>
-    <a href="https://drive.google.com/file/d/10FldQPgOmmeCsHpQE2Tcbrra6Ynt7fy6/view?usp=sharing">iOS IPA</a>
-    <h1>Created by</h1>
-    <h2>chillex</h2>
-    <a href="https://www.youtube.com/@chillex-ob6kw">YouTube</a>
-    <h2>Hiddanity</h2>
-    <a href="https://www.youtube.com/@Hiddy.">YouTube</a>
-  </body>
+        <h1>Split</h1>
+        <p>Приватный сервер Geometry Dash</p>
+        <a href="download"><img src="images/download.png" width="48" height="48"></a>
+        <a href="https://discord.gg/SRrgWfVZta"><img src="images/ds.png" width="48" height="48"></a>
+        <a href="https://youtube.com/@SplitGDPS"><img src="images/yt.png" width="48" height="48"></a>
+        <a href=""><img src="images/tt.png" width="48" height="48"></a>            
+        <a href="https://t.me/splitgdps"><img src="images/tg.png" width="48" height="48"></a>
+        <a href="https://gdpshub.com/gdps/?id=323"><img src="images/gdpshub.png" width="48" height="48"></a>
+        <footer>
+            <h1>Created by</h1>
+            <h2><a href="chillex">chillex</a></h2>
+            <h2><a href="hiddanity">Hiddanity</a></h2>
+        </footer>
+    </body>
 </html>
