--- a/download/index.html
+++ b/download/index.html
@@ -1,8 +1,23 @@
-    <h1>Download</h1>
-    <h2>FruitSpace</h2>
-    <a href="https://gofruit.space/gdps/00bR">Main page</a>
-    <h2>Google Drive</h2>
-    <a href="https://drive.google.com/file/d/1LWDz1uecZ0itgycS-frYukZkG-WFNDuW/view?usp=sharing">Windows EXE</a>
-    <a href="https://drive.google.com/file/d/146qdwWw8cG4YFURYFomcR1-mDmaMfxau/view?usp=sharing">Windows ZIP</a>
-    <a href="https://drive.google.com/file/d/1vJ5aOzkqE4F-mV1hMg5GWqizZWzmkg_g/view?usp=sharing">Android APK</a>
-    <a href="https://drive.google.com/file/d/10FldQPgOmmeCsHpQE2Tcbrra6Ynt7fy6/view?usp=sharing">iOS IPA</a>
+<!DOCTYPE html>
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Split</title>
+    </head>
+    <body>
+        <h1>Download</h1>
+        <h2>FruitSpace</h2>
+        <a href="https://gofruit.space/gdps/00bR">Main page</a>
+        <h2>Google Drive</h2>
+        <a href="https://drive.google.com/file/d/1LWDz1uecZ0itgycS-frYukZkG-WFNDuW/view?usp=sharing">Windows EXE</a>
+        <a href="https://drive.google.com/file/d/146qdwWw8cG4YFURYFomcR1-mDmaMfxau/view?usp=sharing">Windows ZIP</a>
+        <a href="https://drive.google.com/file/d/1vJ5aOzkqE4F-mV1hMg5GWqizZWzmkg_g/view?usp=sharing">Android APK</a>
+        <a href="https://drive.google.com/file/d/10FldQPgOmmeCsHpQE2Tcbrra6Ynt7fy6/view?usp=sharing">iOS IPA</a>
+        <footer>
+            <h1>Created by</h1>
+            <h2><a href="chillex">chillex</a></h2>
+            <h2><a href="hiddanity">Hiddanity</a></h2>
+        </footer>
+    </body>
+</html>
