--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="download"><img src="images/download.png" width="48" height="48"></a>
         <a href="https://discord.gg/SRrgWfVZta"><img src="images/ds.png" width="48" height="48"></a>
         <a href="https://youtube.com/@SplitGDPS"><img src="images/yt.png" width="48" height="48"></a>
-        <a href=""><img src="images/tt.png" width="48" height="48"></a>            
+        <a href="https://youtube.com/@SplitGDPS"><img src="images/tt.png" width="48" height="48"></a>            
         <a href="https://t.me/splitgdps"><img src="images/tg.png" width="48" height="48"></a>
         <a href="https://gdpshub.com/gdps/?id=323"><img src="images/gdpshub.png" width="48" height="48"></a>
         <footer>
