--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html lang="ru">
+<html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Split</title>
     </head>
     <body>
         <h1>Split</h1>
-        <p>Приватный сервер Geometry Dash</p>
-        <a href="https://discord.gg/SRrgWfVZta">Discord</a>
-        <a href="https://youtube.com/@SplitGDPS">YouTube</a>
-        <a href="https://tiktok.com/@splitgdps">TikTok</a>
-        <a href="https://t.me/splitgdps">Telegram</a>
-        <a href="https://gdpshub.com/gdps/?id=323">GDPSHub</a>
-        <a href="https://vk.com/splitgdps">VK</a>
+        <ul>
+            <li><a href="https://discord.gg/SRrgWfVZta">Discord</a></li>
+            <li><a href="https://youtube.com/@SplitGDPS">YouTube</a></li>
+            <li><a href="https://tiktok.com/@splitgdps">TikTok</a></li>
+            <li><a href="https://t.me/splitgdps">Telegram</a></li>
+            <li><a href="https://gdpshub.com/gdps/?id=323">GDPSHub</a></li>
+            <li><a href="https://vk.com/splitgdps">VK</a></li>
+        </ul>
         <footer>
             <h1>Created by</h1>
             <h2><a href="chillex">chillex</a></h2>
