--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Split</title>
-    </head>
-    <body>
-        <h1>Split</h1>
-        <ul>
-            <li><a href="https://discord.gg/SRrgWfVZta">Discord</a></li>
-            <li><a href="https://youtube.com/@SplitGDPS">YouTube</a></li>
-            <li><a href="https://tiktok.com/@splitgdps">TikTok</a></li>
-            <li><a href="https://t.me/splitgdps">Telegram</a></li>
-            <li><a href="https://gdpshub.com/gdps/?id=323">GDPSHub</a></li>
-            <li><a href="https://vk.com/splitgdps">VK</a></li>
-        </ul>
-        <footer>
-            <h1>Created by</h1>
-            <h2><a href="chillex">chillex</a></h2>
-            <h2><a href="hiddanity">Hiddanity</a></h2>
-        </footer>
-    </body>
+<!DOCTYPE html>
+<!--Сделано chillex26 в Discord, пожалуйста, отметьте меня как автора, если вы используете этот код-->
+<html lang="ru">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>SplitGDPS</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<ul>
+			<li><a href="">YouTube</a></li>
+			<li><a href="">VK</a></li>
+			<li><a href="">Discord</a></li>
+			<li class="split">Split</li>
+		</ul>
+		<h1>Split</h1>
+		<p>Приватный сервер Geometry Dash</p>		
+		<a href=""><button class="button panel">Панель</button></a>
+		<center>
+			<h2>Скачать</h2>
+			<big><a href="">На Windows</a>
+			<a href="">На Android</a>
+			<a href="">На iOS</a></big>
+			<h2>Листы</h2>
+			Листы отсутствуют
+		</center>
+	<!--id="download" <a href="#download"><button class="button">Скачать</button></a>-->
+	</body>
 </html>
