--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<h2>Листы</h2>
 			Листы отсутствуют
 		</center>
-	<!--id="download" <a href="#download"><button class="button">Скачать</button></a>-->
+		<a href="download">Legacy download</a>
 	</body>
 </html>
+<!--id="download" <a href="#download"><button class="button">Скачать</button></a>-->
