--- a/user/hiddanity.html
+++ b/user/hiddanity.html
@@ -1,1 +1,12 @@
-
+<html>
+  <head>
+    <title>Hiddanity - Split</title>
+  </head>
+  <body>
+    <a href="..">Back</a>
+    <h1>Hiddanity</h1>
+    <h2>Owner</h2>
+    <a href="https://www.youtube.com/@Hiddy.">YouTube</a>
+    <a href="https://discord.gg/Cq7MhTCfBa">Discord</a>
+  </body>
+</html>
