--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
-<!DOCTYPE html>
 <!--Сделано chillex26 в Discord, пожалуйста, отметьте меня как автора, если вы используете этот код-->
-<html lang="ru">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>SplitGDPS</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<ul>
-			<li><a href="">YouTube</a></li>
-			<li><a href="">VK</a></li>
-			<li><a href="">Discord</a></li>
-			<li class="split">Split</li>
-		</ul>
-		<h1>Split</h1>
-		<p>Приватный сервер Geometry Dash</p>		
-		<a href=""><button class="button panel">Панель</button></a>
-		<center>
-			<h2>Скачать</h2>
-			<big><a href="">На Windows</a>
-			<a href="">На Android</a>
-			<a href="">На iOS</a></big>
-			<h2>Листы</h2>
-			Листы отсутствуют
-		</center>
-		<a href="download">Legacy download</a>
-	</body>
+<!DOCTYPE html>
+    <html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SplitGDPS</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/59cdcc49fd.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#lists">Листы</a></li>
+                    <li><a href="https://gofruit.space/gdps/00bR">Панель</a></li>
+                    <li><a href="#download">Скачать</a></li>
+                    <li class="name"><a href="#">Split</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="icons">
+                <a href="https://discord.gg/SRrgWfVZta"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
+                <a href="https://youtube.com/@SplitGDPS"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></a>
+                <a href="https://vk.com/splitgpds"><i class="fa-brands fa-vk fa-2xl" style="color: #0077ff;"></i></a>
+            </div>
+            <h1>Split</h1>
+            Присоединяйтесь к нашему дискорд серверу!
+            <br>
+            <br>
+            <br>
+            <iframe width="384" height="216" src="https://www.youtube.com/embed/HRl8ZVfyPkg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <br>
+            <br>
+            <br>
+            <article>
+                <section id="download">
+                    <h2>Скачать</h2>
+                    <a href="">На Windows</a>
+                    <a href="">На Android</a>
+                    <a href="">На iOS</a>
+                </section>
+                <section id="lists">
+                    <h2>Листы</h2>
+                    Листы отсутствуют
+                </section>
+            </article>
+        </main>
+    </body>
 </html>
-<!--id="download" <a href="#download"><button class="button">Скачать</button></a>-->
