--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li><a href="#lists">Листы</a></li>
                     <li><a href="https://gofruit.space/gdps/00bR">Панель</a></li>
                     <li><a href="#download">Скачать</a></li>
-                    <li class="name"><a href="#">Split</a></li>
+                    <li class="name">Split</li>
                 </ul>
             </nav>
         </header>
