--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <a href="">На Windows</a>
                     <a href="">На Android</a>
                     <a href="">На iOS</a>
+                    <a href="downloads">Список версий (для персонала)</a>
                 </section>
                 <section id="lists">
                     <h2>Листы</h2>
