--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <h2>Скачать</h2>
                     <a href="">На Windows</a>
                     <a href="">На Android</a>
-                    <a href="">На iOS</a>
-                    <a href="downloads">Список версий (для персонала)</a>
+                    <a href="">На iOS</a><br>
+                    <a href="downloads"><small>Список версий (для персонала)</small></a>
                 </section>
                 <section id="lists">
                     <h2>Листы</h2>
