--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,3 +1,57 @@
+<!--Сделано chillex26 в Discord, пожалуйста, отметьте меня как автора, если вы используете этот код-->
+<!DOCTYPE html>
+    <html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SplitGDPS</title>
+        <link rel="stylesheet" href=".\style.css">
+        <script src="https://kit.fontawesome.com/59cdcc49fd.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#lists">Листы</a></li>
+                    <li><a href="https://gofruit.space/gdps/00bR">Панель</a></li>
+                    <li><a href="#download">Скачать</a></li>
+                    <li class="name"><a href="">Split</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="icons">
+                <a href="https://discord.gg/SRrgWfVZta"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
+                <a href="https://youtube.com/@SplitGDPS"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></a>
+                <a href="https://vk.com/splitgpds"><i class="fa-brands fa-vk fa-2xl" style="color: #0077ff;"></i></a>
+            </div>
+            <h1>Split</h1>
+            Присоединяйтесь к нашему дискорд серверу!
+            <br>
+            <br>
+            <br>
+            <iframe width="384" height="216" src="https://www.youtube.com/embed/HRl8ZVfyPkg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <br>
+            <br>
+            <br>
+            <article>
+                <section id="download">
+                    <h2>Скачать</h2>
+                    <a href="">На Windows</a>
+                    <a href="">На Android</a>
+                    <a href="">На iOS</a><br>
+                    <a href="downloads"><small>Список версий (для персонала)</small></a>
+                </section>
+                <section id="lists">
+                    <h2>Листы</h2>
+                    Листы отсутствуют
+                </section>
+            </article>
+        </main>
+    </body>
+</html>
+
+
 <!DOCTYPE html>
 <html lang="ru">
     <head>
