--- a/downloads/index.html
+++ b/downloads/index.html
@@ -6,67 +6,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SplitGDPS</title>
         <link rel="stylesheet" href=".\style.css">
-        <script src="https://kit.fontawesome.com/59cdcc49fd.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#lists">Листы</a></li>
-                    <li><a href="https://gofruit.space/gdps/00bR">Панель</a></li>
-                    <li><a href="#download">Скачать</a></li>
-                    <li class="name"><a href="">Split</a></li>
-                </ul>
-            </nav>
-        </header>
         <main>
-            <div class="icons">
-                <a href="https://discord.gg/SRrgWfVZta"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
-                <a href="https://youtube.com/@SplitGDPS"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></a>
-                <a href="https://vk.com/splitgpds"><i class="fa-brands fa-vk fa-2xl" style="color: #0077ff;"></i></a>
-            </div>
-            <h1>Split</h1>
-            Присоединяйтесь к нашему дискорд серверу!
-            <br>
-            <br>
-            <br>
-            <iframe width="384" height="216" src="https://www.youtube.com/embed/HRl8ZVfyPkg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <br>
-            <br>
-            <br>
+            <h1>Список версий</h1>
+            <p>Тут апдейт-лог, ссылки на скачивание (потом)</p>
+            <h2>* - недоступно</h2>
             <article>
-                <section id="download">
-                    <h2>Скачать</h2>
-                    <a href="">На Windows</a>
-                    <a href="">На Android</a>
-                    <a href="">На iOS</a><br>
-                    <a href="downloads"><small>Список версий (для персонала)</small></a>
-                </section>
-                <section id="lists">
-                    <h2>Листы</h2>
-                    Листы отсутствуют
+                <section>
+                    <h2>Windows</h2>
+                    <h3>exe Installer v1</h3>
+                    <ol>
+                        <li>*оригинал</li>
+                    </ol>
+                    <h3>zip v1</h3>
+                    <ol>
+                        <li>*оригинал</li>
+                        <li>*+gdhm</li>
+                        <li>+моды</li>
+                        <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
+                    </ol>
+                    <h2>Android</h2>
+                    <h3>apk v1</h3>
+                    <ol>
+                        <li>*оригинал</li>
+                        <li>*+патч</li>
+                        <li>+моды</li>
+                        <li>+новая музыка в меню: Geometry Dash Menu Loop but it's megalovania</li>
+                        <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
+                    </ol>
+                    <br>
                 </section>
             </article>
         </main>
-    </body>
-</html>
-
-
-<!DOCTYPE html>
-<html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>Split</title>
-    </head>
-    <body>
-        <a href="..">Back</a>
-        <h1>Download</h1>
-        <h2>FruitSpace</h2>
-        <a href="https://gofruit.space/gdps/00bR">Main page</a>
-        <h2>Google Drive</h2>
-        <a href="https://drive.google.com/file/d/1LWDz1uecZ0itgycS-frYukZkG-WFNDuW/view?usp=sharing">Windows EXE</a>
-        <a href="https://drive.google.com/file/d/146qdwWw8cG4YFURYFomcR1-mDmaMfxau/view?usp=sharing">Windows ZIP</a>
-        <a href="https://drive.google.com/file/d/1vJ5aOzkqE4F-mV1hMg5GWqizZWzmkg_g/view?usp=sharing">Android APK</a>
-        <a href="https://drive.google.com/file/d/10FldQPgOmmeCsHpQE2Tcbrra6Ynt7fy6/view?usp=sharing">iOS IPA</a>
     </body>
 </html>
