--- a/downloads/index.html
+++ b/downloads/index.html
@@ -26,6 +26,8 @@
                         <li>+моды</li>
                         <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
                     </ol>
+                </section>
+                <section>
                     <h2>Android</h2>
                     <h3>apk v1</h3>
                     <ol>
@@ -35,7 +37,13 @@
                         <li>+новая музыка в меню: Geometry Dash Menu Loop but it's megalovania</li>
                         <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
                     </ol>
-                    <br>
+                </section>
+                <section>
+                    <h2>iOS</h2>
+                    <h3>ipa v1</h3>
+                    <ol>
+                        <li>*оригинал</li>
+                    </ol>
                 </section>
             </article>
         </main>
