--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SplitGDPS</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
         <script src="https://kit.fontawesome.com/59cdcc49fd.js" crossorigin="anonymous"></script>
     </head>
     <body>
