--- a/downloads/index.html
+++ b/downloads/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SplitGDPS</title>
-        <link rel="stylesheet" href="..\style.css">
+        <link rel="stylesheet" href="..\styles\font.css">
     </head>
     <body>
         <main>
