--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="">На Windows</a>
                     <a href="">На Android</a>
                     <a href="">На iOS</a><br>
-                    <a href="downloads"><small>Список версий (для персонала)</small></a>
+                    <a href="downloads"><small>Список версий</small></a>
                 </section>
                 <section id="lists">
                     <h2>Листы</h2>
