--- a/downloads/index.html
+++ b/downloads/index.html
@@ -5,10 +5,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SplitGDPS</title>
-        <link rel="stylesheet" href="..\styles\font.css">
+        <link rel="stylesheet" href="..\styles\downloads.css">
     </head>
     <body>
         <main>
+            <a href="..">Обратно</a>
             <h1>Список версий</h1>
             <p>Тут апдейт-лог, ссылки на скачивание (потом)</p>
             <h2>* - недоступно</h2>
