--- a/downloads/index.html
+++ b/downloads/index.html
@@ -12,18 +12,18 @@
             <a href="..">Обратно</a>
             <h1>Список версий</h1>
             <p>Тут апдейт-лог, ссылки на скачивание (потом)</p>
-            <h2>* - недоступно</h2>
+            <h2 class="unavailable">красный цвет - недоступно</h2>
             <article>
                 <section>
                     <h2>Windows</h2>
                     <h3>exe Installer v1</h3>
                     <ol>
-                        <li>*оригинал</li>
+                        <li class="unavailable">оригинал</li>
                     </ol>
                     <h3>zip v1</h3>
                     <ol>
-                        <li>*оригинал</li>
-                        <li>*+gdhm</li>
+                        <li class="unavailable">оригинал</li>
+                        <li class="unavailable">+gdhm</li>
                         <li>+моды</li>
                         <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
                     </ol>
