--- a/downloads/index.html
+++ b/downloads/index.html
@@ -32,8 +32,8 @@
                     <h2>Android</h2>
                     <h3>apk v1</h3>
                     <ol>
-                        <li>*оригинал</li>
-                        <li>*+патч</li>
+                        <li class="unavailable">оригинал</li>
+                        <li class="unavailable">+патч</li>
                         <li>+моды</li>
                         <li>+новая музыка в меню: Geometry Dash Menu Loop but it's megalovania</li>
                         <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
