--- a/downloads/index.html
+++ b/downloads/index.html
@@ -43,7 +43,7 @@
                     <h2>iOS</h2>
                     <h3>ipa v1</h3>
                     <ol>
-                        <li>*оригинал</li>
+                        <li><a href="https://cdn.fruitspace.one/gdps_installers/00bR_Split.ipa">оригинал</a></li>
                     </ol>
                 </section>
             </article>
