--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <section id="download">
                     <h2>Скачать</h2>
                     <a href="">На Windows</a>
-                    <a href="">На Android</a>
-                    <a href="">На iOS</a><br>
+                    <a href="https://remeow.ru/drive/uploads/390415/Splitv112.apk">На Android</a>
+                    <a href="https://cdn.fruitspace.one/gdps_installers/00bR_Split.ipa">На iOS (без модов)</a><br>
                     <a href="downloads"><small>Список версий</small></a>
                 </section>
                 <section id="lists">
