--- a/downloads/index.html
+++ b/downloads/index.html
@@ -18,12 +18,12 @@
                     <h2>Windows</h2>
                     <h3>exe Installer v1</h3>
                     <ol>
-                        <li class="unavailable">оригинал</li>
+                        <li><a href="https://cdn.fruitspace.one/gdps_installers/00bR_Split.exe">оригинал (устарел)</a></li>
                     </ol>
                     <h3>zip v1</h3>
                     <ol>
-                        <li class="unavailable">оригинал</li>
-                        <li class="unavailable">+gdhm</li>
+                        <li>оригинал</li>
+                        <li>+gdhm</li>
                         <li>+моды</li>
                         <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
                     </ol>
@@ -32,18 +32,18 @@
                     <h2>Android</h2>
                     <h3>apk v1</h3>
                     <ol>
-                        <li class="unavailable">оригинал</li>
-                        <li class="unavailable">+патч</li>
+                        <li>оригинал</li>
+                        <li>+патч</li>
                         <li>+моды</li>
                         <li>+новая музыка в меню: Geometry Dash Menu Loop but it's megalovania</li>
-                        <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
+                        <li><a href="https://remeow.ru/drive/uploads/390415/Splitv112.apk">+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</a></li>
                     </ol>
                 </section>
                 <section>
                     <h2>iOS</h2>
                     <h3>ipa v1</h3>
                     <ol>
-                        <li><a href="https://cdn.fruitspace.one/gdps_installers/00bR_Split.ipa">оригинал</a></li>
+                        <li><a href="https://cdn.fruitspace.one/gdps_installers/00bR_Split.ipa">оригинал (без модов, устарел) обновления iOS версии не будет</a></li>
                     </ol>
                 </section>
             </article>
