--- a/downloads/index.html
+++ b/downloads/index.html
@@ -23,8 +23,8 @@
                     <h3>zip v1</h3>
                     <ol>
                         <li>оригинал</li>
-                        <li>+gdhm</li>
-                        <li>+моды</li>
+                        <li><a href="https://remeow.ru/drive/uploads/390415/Splitv110.zip">+моды</a></li>
+                        <li><a href="">+gdhm</a></li>
                         <li>+новая музыка в меню: Tally Hall - Ruler of Everything [Instrumental]</li>
                     </ol>
                 </section>
